--- a/faq-app/package.json
+++ b/faq-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ak-run.github.io/faq-app",
+  "homepage": "https://ak-run.github.io/faq-app",
   "name": "faq-app",
   "version": "0.1.0",
   "private": true,
